Made tab buttons "no-wrap" to prevent them wrapping an overwriting the toolbar. For #1716.

--- a/gui-js/apps/minsky-web/src/app/app.component.scss
+++ b/gui-js/apps/minsky-web/src/app/app.component.scss
@@ -32,7 +32,7 @@
   .tabs {
     display: flex;
     border-bottom: 1px solid $toolbar-box;
-    flex-wrap: wrap;
+    flex-wrap: no-wrap;
     .tab {
       border-left: 2px solid $toolbar-border;
       background-color: $toolbar-bg;
